@@ -1,5 +1,7 @@
 Revision history for Perl extension Perl-MinimumVersion
 
+        - Fix detection of binary numbers (Alexandr Ciornii)
+
 1.26 Thu 22 Jul 2010
 	- Detect "package NAME VERSION" in 5.12. (Steffen Mueller)
 	- Detect "..." (yada yada yada) in 5.12. (Steffen Mueller)
